# backend/src/admin-members/dto/admin-member-list-item.dto.ts
@@ -1,0 +1,18 @@
+import { ApiProperty } from "@nestjs/swagger";
+
+export class AdminMemberListItemDto {
+  @ApiProperty()
+  id: number;
+
+  @ApiProperty()
+  name: string;
+
+  @ApiProperty()
+  email: string;
+
+  @ApiProperty()
+  createdAt: Date;
+
+  @ApiProperty({ type: String, format: "date-time", nullable: true })
+  deletedAt: Date | null;
+}
